fix image break on large devices

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .card-img-top {
   max-height: 10em;
+  max-width: 100%;
   width: auto
 }
 .card-img-container {
